@@ -1,3 +1,14 @@
+Mon Nov 26 15:01:53 CET 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* If client entry is deleted with active key agreement
+	  session, abort the session.
+
+	  The silc_client_abort_key_agreement now calls the completion
+	  callback with new SILC_KEY_AGREEMENT_ABORTED status.
+
+	  Affected file lib/silcclient/silcapi.h, client_keyagr.c and
+	  idlist.c.
+
 Sun Nov 25 18:01:45 EET 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Don't use __restrict in older GCC's.  Affected file is
